# piiv

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README.txt  install.sh  license.txt  piiv.yaml  pyproject.toml  requirements-lock.txt  use.txt
benchmarks/: __init__.py
benchmarks/data_generator/: README.md  __init__.py  build_release.py  datasheet.py  faker_providers.py  injectors.py  noise.py  pipeline.py  report.py  seeds.py
benchmarks/data_generator/tests/: test_build_release.py  test_smoke.py
benchmarks/data_import/: README.md  __init__.py  analyze.py  cli.py  loaders.py  quality.py  report.py  run_quality_scan.py  transforms.py
benchmarks/data_import/reports/: ai4privacy_de.md  ai4privacy_de_combined_names.md  (+14 more)
benchmarks/pii_evaluation/: README.md  __init__.py  aggregate_detector_ablation.py  aggregate_section3.py  aggregate_stress_reports.py  bootstrap.py  cli_common.py  diagnose_cross_turn_failures.py  forensics_section3.py  measure_vault_ref_stability.py  metrics.py  metrics_argfidelity.py  pipelines.py  run_detector_ablation.py  run_experiment.py  run_imported_dataset_eval.py  run_stress_report.py  tools.py
claims/: README.txt
claims/1/: claim.txt  run.sh
claims/2/: claim.txt  run.sh
claims/3/: claim.txt  run.sh
fine_tuning/: README.md  __main__.py  evaluate.py  label_space.py  prepare_data.py  train.py
fine_tuning/tests/: test_label_space.py  test_prepare_data.py
scripts/: reproduce.sh  run_paper_eval.sh  run_section1_matrix_n1000.sh  run_section3_matrix.sh  setup.sh
src/piiv/: __init__.py  _detector_common.py  _latency.py  config.py  llm_pii_detector.py  opf_pii_detector.py  pii.py  pii_leak_guard.py  pii_tool_broker.py  pii_vault.py  pii_virtualizer.py  presidio_pii_detector.py  redaction.py
tests/: test_config.py  test_latency_recorder.py  test_llm_pii_detector.py  test_pii_leak_guard.py  test_pii_tool_broker.py  test_pii_vault.py  test_pii_virtualization_integration.py  test_pii_virtualizer.py  test_presidio_pii_detector.py  test_privacy_invariants.py  test_regex_collision_fixes.py  test_streaming_ref_rehydrator.py
(+180 files in other folders)
